// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interpreter store > can be created 1`] = `
{
  "builder": {
    "entities": {},
    "entitiesExtensions": {},
    "generateEntityId": [Function],
    "validateEntityId": [Function],
    "validateSchema": [Function],
  },
  "clearEntitiesValues": [Function],
  "clearEntityValue": [Function],
  "getData": [Function],
  "getEntitiesErrors": [Function],
  "getEntitiesValues": [Function],
  "getEntityError": [Function],
  "getEntityValue": [Function],
  "getUnprocessableEntitiesIds": [Function],
  "isEntityProcessable": [Function],
  "resetEntitiesErrors": [Function],
  "resetEntitiesValues": [Function],
  "resetEntityError": [Function],
  "resetEntityValue": [Function],
  "schema": {
    "entities": {},
    "root": [],
  },
  "setData": [Function],
  "setEntitiesErrors": [Function],
  "setEntitiesValues": [Function],
  "setEntityError": [Function],
  "setEntityValue": [Function],
  "subscribe": [Function],
  "validateEntitiesValues": [Function],
  "validateEntityValue": [Function],
}
`;

exports[`interpreter store > can be created with initial data 1`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear all entities values 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {},
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear all entities values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can clear an entity value 1`] = `"Entities of type \\"section\\" are not allowed to have values."`;

exports[`interpreter store > can clear an entity value 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear an entity value 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset all entities errors 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset all entities errors 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset all entities values 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset all entities values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset an entity error 1`] = `"Entities of type \\"section\\" are not allowed to have errors."`;

exports[`interpreter store > can reset an entity error 2`] = `
{
  "entitiesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset an entity error 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset an entity value 1`] = `"Entities of type \\"section\\" are not allowed to have values."`;

exports[`interpreter store > can reset an entity value 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset an entity value 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can retrieve an entity value and error 1`] = `"value"`;

exports[`interpreter store > can retrieve an entity value and error 2`] = `"error"`;

exports[`interpreter store > can return the data 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity error 1`] = `"Entities of type \\"section\\" are not allowed to have errors."`;

exports[`interpreter store > can set an entity error 2`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity error 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set an entity value 1`] = `"Entities of type \\"section\\" are not allowed to have values."`;

exports[`interpreter store > can set an entity value 2`] = `"Entity with ID \\"2df173ee-6b88-4744-a74d-0f21d49166b3\\" is of type \\"section\\" but expected \\"invalid\\"."`;

exports[`interpreter store > can set an entity value 3`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity value 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set entities errors 1`] = `"Entities of type \\"section\\" are not allowed to have errors."`;

exports[`interpreter store > can set entities errors 2`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new text error",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
    "e31665da-9663-4a4f-87ac-cd326760863e": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set entities errors 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
          "e31665da-9663-4a4f-87ac-cd326760863e": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
          "e31665da-9663-4a4f-87ac-cd326760863e": "initial error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
          "e31665da-9663-4a4f-87ac-cd326760863e": "default",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set entities values 1`] = `"Entities of type \\"section\\" are not allowed to have values."`;

exports[`interpreter store > can set entities values 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new text value",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set entities values 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select value",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "text value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set the data 1`] = `"Entities of type \\"section\\" are not allowed to have values."`;

exports[`interpreter store > can set the data 2`] = `"Entities of type \\"section\\" are not allowed to have errors."`;

exports[`interpreter store > can set the data 3`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set the data 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can validate entities 1`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
    "6e0035c3-0d4c-445f-a42b-2d971225447c": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
  },
  "entitiesValues": {
    "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
    "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
    "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can validate entities 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "initial text error",
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          "6e0035c3-0d4c-445f-a42b-2d971225447c": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when clearing values 1`] = `[]`;

exports[`interpreter store > computes entities processability when clearing values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when clearing values of all entities 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when clearing values of all entities 2`] = `[]`;

exports[`interpreter store > computes entities processability when clearing values of all entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when created 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when created 2`] = `false`;

exports[`interpreter store > computes entities processability when created 3`] = `true`;

exports[`interpreter store > computes entities processability when resetting values 1`] = `[]`;

exports[`interpreter store > computes entities processability when resetting values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when resetting values of all entities 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when resetting values of all entities 2`] = `[]`;

exports[`interpreter store > computes entities processability when resetting values of all entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when setting data 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when setting data 2`] = `[]`;

exports[`interpreter store > computes entities processability when setting data 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "string",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when updating values 1`] = `[]`;

exports[`interpreter store > computes entities processability when updating values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "test",
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "test",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "test",
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "test",
        },
        "unprocessableEntitiesIds": [],
      },
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "test",
        },
        "unprocessableEntitiesIds": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > doesn't reset entities values when created if configured to 1`] = `{}`;

exports[`interpreter store > resets entities values when created 1`] = `
{
  "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
  "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 1`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => undefined,
  },
  "unprocessableEntitiesIds": Set {},
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 2`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {},
  "unprocessableEntitiesIds": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 3`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {},
  "unprocessableEntitiesIds": Set {},
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 1`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {},
  "unprocessableEntitiesIds": Set {
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 2`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => "process",
  },
  "unprocessableEntitiesIds": Set {
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 3`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => "process",
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => "process",
  },
  "unprocessableEntitiesIds": Set {
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 4`] = `
{
  "entitiesErrors": Map {},
  "entitiesValues": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => "process",
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => "process",
    "2df173ee-6b88-4744-a74d-0f21d49166b3" => "process",
  },
  "unprocessableEntitiesIds": Set {},
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 5`] = `
{
  "entitiesErrors": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => "error",
  },
  "entitiesValues": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => "process",
  },
  "unprocessableEntitiesIds": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
  },
}
`;
